# xycrd

./: Cargo.toml  LICENSE  README.md  example-contentcheck.yaml  example.yaml  integration-tests.sh  nfpm.yml
.github/workflows/: rust.yml
deploy/: postinst.sh
deploy/config/: task.cfg
deploy/man1/: xycrd.1
src/: install.yaml  main.rs
