[package]
name = "xycrd"
version = "0.1.0"
authors = ["Jonas Weber <weber@jonasw.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = {version = "0.52.0", features = ["derive"]}
serde = "1.0"
serde_json = "1.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
structopt = "0.3.13"
tokio = { version = "1", features = ["rt", "time", "macros", "fs", "io-util"] }
kube-derive = "0.52"
schemars = "0.8.3"
kube-runtime = "0.52.0"
futures = "0.3.8"
libc = "0.2.94"
log = "0.4.14"
stderrlog = "0.5.1"

[profile.release]
lto = true
codegen-units = 1
